# scanomatic-standalone

./: .dockerignore  .editorconfig  .eslintrc.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  get_installed_version.py  karma.conf.js  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  scan-requirements.txt  setup.py  setup_config.py  setup_tools.py  tox.ini  typecheck-changed.sh  vite.config.js  webpack.config.js
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml  codeql-analysis.yml
frontend/: CCC.html  access_restricted.html  analysis.html  experiment.html  maintain.html  qc_norm.html  status.html
frontend/style/: compilation.css  experiment.css  status.css
scanomatic/: __init__.py
scanomatic/data_processing/: calibration.py  convolution.py  data_bridge.py  growth_phenotypes.py  mock_numpy_interface.py  norm.py  phenotyper.py  phenotypes.py  project.py  strain_handler.py  strain_selector.py  subplates.py  vector_norm.py  vector_phenotype_analysis.py
scanomatic/generics/: abstract_model_factory.py  base_classes.py  decorators.py  enums.py  maths.py  model.py  phenotype_filter.py  purge_importing.py  singleton.py
scanomatic/image_analysis/: analysis_image.py  blob.py  exceptions.py  first_pass.py  first_pass_image.py  grayscale.py  grayscale_detection.py  grid.py  grid_array.py  grid_cell.py  grid_cell_extra.py  image_basics.py  image_fixture.py  image_grayscale.py  signal.py  support.py
scanomatic/io/: app_config.py  backup.py  ccc_data.py  first_pass_results.py  fixtures.py  image_data.py  image_loading.py  jsonizer.py  logger.py  mail.py  meta_data.py  movie_writer.py  paths.py  pickler.py  power_manager.py  resource_status.py  rpc_client.py  sane.py  scanner_manager.py  scanstore.py  source.py
scanomatic/models/: analysis_model.py  compile_project_model.py  features_model.py  fields_lookup.py  fixture_models.py  phases_models.py  rpc_job_models.py  scanning_model.py  settings_models.py
scanomatic/qc/: analysis_results.py  compilation_results.py  palette.py  phenotype_results.py
scanomatic/scripts/: scan_o_matic.py  scan_o_matic_server.py
scanomatic/server/: analysis_effector.py  jobs.py  (+10 more)
scripts/: scan-o-matic  scan-o-matic_server
tools/: README.md  image_analysis_support.py  signal.py  strain_handler.py
(+248 files in other folders)
