[project]
name = "scanomatic"
version = "3.0.0"
description = "High Throughput Solid Media Image Phenotyping Platform"
readme = "README.md"
authors = [
    { name = "Martin Zackrisson", email = "martin.zackrisson@gu.se" },
]
classifiers=[
    "Development Status :: 7 - Inactive",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = "==3.9.*"
dependencies = [
    "aniso8601==9.0.1",
    "certifi==2021.10.8",
    "chardet==4.0.0",
    "charset-normalizer==2.0.7",
    "click==8.0.3",
    "cycler==0.10.0",
    "defusedxml==0.7.1",
    "enum34==1.1.10",
    "et-xmlfile==1.1.0",
    "flask==2.0.2",
    "flask-cors==3.0.10",
    "flask-restful==0.3.9",
    "idna==3.3",
    "imageio==2.9.0",
    "itsdangerous==2.0.1",
    "jinja2==3.0.2",
    "kiwisolver==1.3.2",
    "markupsafe==2.0.1",
    "matplotlib==3.4.3",
    "networkx==2.6.3",
    "numpy==1.21.3",
    "odfpy==1.4.1",
    "openpyxl==3.0.9",
    "pandas==1.3.4",
    "pandas-stubs==1.2.0.40",
    "pillow==9.0.0",
    "psutil==5.8.0",
    "pyparsing==3.0.1",
    "python-dateutil==2.8.2",
    "python-nmap==0.7.1",
    "pytz==2021.3",
    "pywavelets==1.1.1",
    "requests==2.26.0",
    "scikit-image==0.18.3",
    "scipy==1.7.1",
    "setproctitle==1.2.2",
    "sh==1.14.2",
    "six==1.16.0",
    "tifffile==2021.10.12",
    "types-chardet==4.0.1",
    "types-mock==4.0.3",
    "types-pillow==8.3.7",
    "types-psutil==5.8.13",
    "types-python-dateutil==2.8.2",
    "types-python-nmap==0.6.2",
    "types-requests==2.25.11",
    "urllib3==1.26.7",
    "uuid==1.30",
    "werkzeug==2.0.2",
    "xlrd==2.0.1",
]

[project.scripts]
scan-o-matic = "scanomatic.scripts.scan_o_matic:main"
scan-o-matic_server = "scanomatic.scripts.scan_o_matic_server:main"

[project.urls]
Repository = "https://github.com/scan-o-matic/scannomatic-standalone"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
